layout bug
the post div isn't displaying right once loaded into github

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ div#contentList
 
 div#footer
 {
-  float: right;
+  float: left;
   width: 100%;
   height: 100px;
   margin-top: 10px;
